--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -1,2 +1,9 @@
 *
   font-family: 微軟正黑體
+
+#floatobject2
+  transition-duration: 0.5s
+  
+#floatobject:hover #floatobject2
+  box-shadow: 10px 10px 5px grey
+
