--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,28 +17,26 @@
 		  <div class="columns">
 		  	<% type.products.each do |product| %>
 			  	<% if product.shelve %>
-				    <div class="column is-3">
-				    	<div class="card">
+				    <div class="column is-3" id="floatobject">
+				    	<div class="card" id="floatobject2">
 				    		<div class="card-image">
-				    			<figure class="image is-318x318 is-hidden-mobile">
+				    			<figure class="image is-318x318 is-hidden-mobile" id="float">
 				    				<%= link_to  product_path(product) do%>
 				    				<%= image_tag product.pictures %>
 				    				<% end %>
 				    			</figure>
-				    			<figure class="image is-272x272 is-hidden-desktop">
+				    			<figure class="image is-272x272 is-hidden-desktop" id="float">
 				    				<%= link_to  product_path(product) do%>
 				    				<%= image_tag product.pictures %>
 				    				<% end %>
 				    			</figure>				    			
-				    		</div>
+				    		</div>				    		
 		    		<div class="card-content">
-		    			<div class="columns is-5">
 		    				<div class="column">
 		    					<div class="title">
 		    			          <%= product.name %>
 		    			        </div>
 		    				</div>
-		    			</div>
 						  <div class="column">					  	
 							<div class="columns">
 								<div class="column">
@@ -50,15 +48,10 @@
 
 							</div>						  	
 						  </div>
-
-
-							<div class="column">
-								敘述 : 
-								<br>
-								<%=truncate product.description, length: 50, omission:'...'%>
-							</div>			
+		
 		    		</div>
-				    	</div>
+
+				    </div>
 				    </div>			  		
 			  	<% end %>
 		    <% end %>
