--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,20 +21,30 @@
                 <p class="button is-danger is-outlined">已下架</p>  
                 <% else %>
                  <%= link_to '我要購買',order_path,class:'button is-danger'%>  
-                <% end %>             
-                </div>                      
-                <div class="column is-size-4 ">
+                <% end %> 
+                            
+                </div>                                                              
+                <div class="column is-size-4 has-text-weight-semibold">
                     價格:
-                    <div class=" is-size-3 has-text-weight-semibold">
-                     NT$<%= @product.price %> 
-                    </div>
+                <div class=" is-size-3 has-text-weight-bold">
+                    NT$<%= @product.price %> 
+                </div>
                 </div>
                 <div class="column is-size-4 ">
                     敘述:
                 <div class="is-size-5 has-text-weight-semibold">
                     <%=simple_format  @product.description %> 
                 </div>   
-                </div>                  
+                </div> 
+                <div class="column">
+                    設計師:
+                    <div class="title is-size-4">
+                        <%= @product.designer.name %>
+                    </div>
+                    <figure class="image is-128x128 ">
+                        <%= image_tag @product.designer.image %>
+                    </figure>                    
+                </div>                                  
                 <div class="column has-text-right">
                  <%= link_to '上一頁',:back,class:'button is-info  '%>               
                 </div>                    
