--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  *= require bulma/bulma
  *= require products 
+ *= require loading
  */
  @import "font-awesome-sprockets";
  @import "font-awesome";
