--- a/app/views/products/order_index.html.erb
+++ b/app/views/products/order_index.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">
 		<p class="title has-text-danger "><%= flash[:note] %></p>
-		<div class="title has-text-centered">購買清單</div>
+		<div class="title has-text-centered" style="color:hsl(141, 71%, 48%)"">購買清單</div>
 				  <br>
 		  <br>
 		  <br>
