--- a/app/assets/stylesheets/loading.css
+++ b/app/assets/stylesheets/loading.css
@@ -36,7 +36,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background-color: rgb(48,117,11);
+background-color: hsl(141, 71%, 48%);
 animation: cssload-fold-thecube 2.76s infinite linear both;
 -o-animation: cssload-fold-thecube 2.76s infinite linear both;
 -ms-animation: cssload-fold-thecube 2.76s infinite linear both;
@@ -175,3 +175,43 @@ opacity: 1;
 opacity: 0;
 }
 }
+
+@media screen and (max-width: 768px) {
+.cssload-thecube {
+left: 35%;
+margin-top: 150px;
+}
+
+.cssload-thecube .cssload-cube {
+float: left;
+width: 50%;
+height: 50%;
+position: relative;
+transform: scale(1.2);
+-o-transform: scale(1.2);
+-ms-transform: scale(1.2);
+-webkit-transform: scale(1.2);
+-moz-transform: scale(1.2);
+}
+.cssload-thecube .cssload-c2 {
+transform: scale(1.2) rotateZ(90deg);
+-o-transform: scale(1.2) rotateZ(90deg);
+-ms-transform: scale(1.2) rotateZ(90deg);
+-webkit-transform: scale(1.2) rotateZ(90deg);
+-moz-transform: scale(1.2) rotateZ(90deg);
+}
+.cssload-thecube .cssload-c3 {
+transform: scale(1.2) rotateZ(180deg);
+-o-transform: scale(1.2) rotateZ(180deg);
+-ms-transform: scale(1.2) rotateZ(180deg);
+-webkit-transform: scale(1.2) rotateZ(180deg);
+-moz-transform: scale(1.2) rotateZ(180deg);
+}
+.cssload-thecube .cssload-c4 {
+transform: scale(1.2) rotateZ(270deg);
+-o-transform: scale(1.2) rotateZ(270deg);
+-ms-transform: scale(1.2) rotateZ(270deg);
+-webkit-transform: scale(1.2) rotateZ(270deg);
+-moz-transform: scale(1.2) rotateZ(270deg);
+}	
+	}
