--- a/app/views/admin/commodities/edit.html.erb
+++ b/app/views/admin/commodities/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="columns">
   <div class="column  is-4 is-offset-4">
     <br>
-    <h1 class="title has-text-centered">商品管理</h1>
+    <h1 class="title has-text-centered" style="color:hsl(141, 71%, 48%)">商品管理</h1>
     <br>
     <br>
     <br>
