--- a/app/views/admin/designers/index.html.erb
+++ b/app/views/admin/designers/index.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">
 	<br>
-		<h1 class="title has-text-centered">設計師列表</h1>
+		<h1 class="title has-text-centered" style="color:hsl(141, 71%, 48%)">設計師列表</h1>
 		<% @designers.each do |designer| %>
     <br>
     <br>
