--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -2,7 +2,7 @@
 <section class="section">
 	<div class="container">
 		<br>	
-		<h1 class="title has-text-centered">聯絡方式</h1>
+		<h1 class="title has-text-centered" style="color:hsl(141, 71%, 48%)">聯絡方式</h1>
 		
 		  <br>	
 
