--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -53,7 +53,7 @@
     <div class="container">
       <ul>
         <li class="<%= 'is-active'if current_page?brand_path %>">
-          <%= link_to '牌品',brand_path %>
+          <%= link_to '品牌',brand_path %>
         </li>
         <li class="<%= 'is-active'if current_page?products_path %>">
           <%= link_to '商品',products_path %>
