--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,12 +12,36 @@
  *
  *= require_tree .
  *= require_self
- *= require bulma/bulma
+
  *= require products 
  *= require loading
  */
  @import "font-awesome-sprockets";
  @import "font-awesome";
- @import "bulma/sass/utilities/initial-variables";
+ @import "bulma/sass/utilities/_all";
+
+$success:rgb(54,133,12);
+$danger:hsl(348, 100%, 50%);
+
+// Setup $colors to use as bulma classes (e.g. 'is-twitter')
+$colors: (
+    white: ($white, $black),
+    black: ($black, $white),
+    light: ($light, $light-invert),
+    dark: ($dark, $dark-invert),
+    primary: ($primary, $primary-invert),
+    info: ($info, $info-invert),
+    success: ($success, $success-invert),
+    warning: ($warning, $warning-invert),
+    danger: ($danger, $danger-invert),
+
+);
+
+// Links
+$link: $primary;
+$link-invert: $primary-invert;
+$link-focus-border: $primary;
+ @import "bulma/bulma";
+
 
 
