--- a/app/views/admin/details/index.html.erb
+++ b/app/views/admin/details/index.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
 		<div class="container">
 			<br>
-			<div class="title has-text-centered" style="color:hsl(141, 71%, 48%)">
+			<div class="title has-text-centered has-text-success"
 				顧客名單
 			</div>
 			<br>
