--- a/app/views/admin/details/show.html.erb
+++ b/app/views/admin/details/show.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">	
 		<br>
-		<h1 class="title is-size-6-mobile has-text-centered " style="color:hsl(141, 71%, 48%)"><%= @user.email %> <br>的訂單紀錄</h1>
+		<h1 class="title is-size-6-mobile has-text-centered  has-text-success" ><%= @user.email %> <br>的訂單紀錄</h1>
 		<br>
 		<br>
 		<br>
