--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -2,7 +2,7 @@
 <section class="section">
 	<div class="container">
 		<br>	
-		<h1 class="title has-text-centered " style="color:hsl(141, 71%, 48%)">品牌</h1>
+		<h1 class="title has-text-centered has-text-success" >品牌</h1>
 		
 		  <br>	
 
