--- a/app/views/products/detail.html.erb
+++ b/app/views/products/detail.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<p class="title has-text-success "><%= flash[:note] %></p>		
 
-		<h1 class="title has-text-centered" style="color:hsl(141, 71%, 48%)">訂單紀錄</h1>
+		<h1 class="title has-text-centeredhas-text-success" >訂單紀錄</h1>
 		  <br>
 		  <br>
 		  <br>
