--- a/app/assets/stylesheets/loading.css
+++ b/app/assets/stylesheets/loading.css
@@ -36,7 +36,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background-color: hsl(141, 71%, 48%);
+background-color: rgb(54,133,12);
 animation: cssload-fold-thecube 2.76s infinite linear both;
 -o-animation: cssload-fold-thecube 2.76s infinite linear both;
 -ms-animation: cssload-fold-thecube 2.76s infinite linear both;
