--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <br>
     <br>
     <br>
-    <h1 class="title has-text-centered">註冊</h1>
+    <h1 class="title has-text-centered has-text-success">註冊</h1>
     <div class="box">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -27,9 +27,8 @@
     <%= f.password_field :password_confirmation, class: 'input', autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "註冊" %>
-  </div>
+    <%= f.submit "註冊" ,class:'button is-success is-outlined '%>
+
 <% end %>
     </div>
 
