--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -37,11 +37,11 @@
 
   <div class="hero-body">
     <div class="container has-text-centered">
-      <p class="title is-2">
+      <p class="title is-2 has-text-left ">
         一盒
       </p>
       <br>
-      <p class="subtitle  is-6">
+      <p class="subtitle  is-6 has-text-left ">
         一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡,裝載每份深刻
       </p>
     </div>
