--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -34,25 +34,65 @@
                 </div>
                 <div class="column is-size-4 has-text-weight-semibold">
                     敘述:
-                <div class=" is-size-5 has-text-weight-normal">
+                <div class=" is-size-5 has-text-weight-normal" >
                     <%=simple_format  @product.description %> 
                 </div>                    
+                </div>             
+        </div>       
+        </div>
+        <hr>
+        <div class="column">
+        <div class="title">
+            商品照片:
+        </div>
+
+            <div class="column has-text-centered">
+                <figure class="image is-3by2 is-hidden-mobile " >
+                    <%= image_tag @product.image1 %>
+                </figure> 
+                <figure class="image is-256x256 is-hidden-desktop">
+                    <%= image_tag @product.image1 %>
+                </figure> 
+            </div>
+            <div class="column has-text-centered">
+                <figure class="image is-3by2 is-hidden-mobile" >
+                    <%= image_tag @product.image2 %>
+                </figure> 
+                <figure class="image is-256x256 is-hidden-desktop">
+                    <%= image_tag @product.image2%>
+                </figure>
+            </div>
+            <div class="column has-text-centered">
+                <figure class="image is-3by2 is-hidden-mobile">
+                    <%= image_tag @product.image3 %>
+                </figure> 
+                <figure class="image is-256x256 is-hidden-desktop">
+                    <%= image_tag @product.image3 %>
+                </figure>  
+            </div>
+            <div class="column has-text-centered">
+                <figure class="image is-3by2 is-hidden-mobile">
+                    <%= image_tag @product.image4 %>
+                </figure> 
+                <figure class="image is-256x256 is-hidden-desktop">
+                    <%= image_tag @product.image4 %>
+                </figure> 
+            </div>
+        <hr>
+            <div class="column">
+                設計師:
+                <div class="title is-size-4">
+                    <%= @product.designer.name %>
                 </div>
-                <div class="column">
-                    設計師:
-                    <div class="title is-size-4">
-                        <%= @product.designer.name %>
-                    </div>
-                    <figure class="image is-128x128 ">
-                        <%= image_tag @product.designer.image %>
-                    </figure>                    
-                </div>       
-                <div class="column has-text-right">
-                 <%= link_to '上一頁',:back,class:'button is-info  '%>               
-                </div>            
+                <figure class="image is-128x128 ">
+                    <%= image_tag @product.designer.image %>
+                </figure>                    
+            </div>                                 
         </div>
-           
-        </div>
+
+        <div class="column has-text-right">
+         <%= link_to '上一頁',:back,class:'button is-info  '%>               
+        </div>         
 
         </div>
 </section>
