--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,7 +24,7 @@
 				    				<%= image_tag product.pictures %>
 				    				<% end %>
 				    			</figure>
-				    			<figure class="image is-272x272 is-hidden-desktop" id="float">
+				    			<figure class="image is-hidden-desktop" id="float">
 				    				<%= link_to  product_path(product) do%>
 				    				<%= image_tag product.pictures %>
 				    				<% end %>
