--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -25,7 +25,7 @@
 		    				<%= image_tag product.pictures %>
 		    				<% end %>
 		    			</figure>
-		    			<figure class="image is-272x272 is-hidden-desktop" id="float">
+		    			<figure class="image is-hidden-desktop" id="float">
 		    				<%= link_to  admin_commodity_path(product) do%>
 		    				 <%= image_tag product.pictures %>
 		    				<% end %>
