--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -45,39 +45,47 @@
         <div class="title">
             商品照片:
         </div>
-
-            <div class="column has-text-centered">
+            <% unless @product.image1.blank? %>
+             <div class="column has-text-centered">
                 <figure class="image is-3by2 is-hidden-mobile " >
                     <%= image_tag @product.image1 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image1 %>
                 </figure> 
-            </div>
+            </div>               
+            <% end %>
+            <% unless @product.image2.blank?%>
             <div class="column has-text-centered">
                 <figure class="image is-3by2 is-hidden-mobile" >
                     <%= image_tag @product.image2 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image2%>
                 </figure>
-            </div>
+            </div>                
+            <% end %>
+            <% unless @product.image3.blank? %>
             <div class="column has-text-centered">
                 <figure class="image is-3by2 is-hidden-mobile">
                     <%= image_tag @product.image3 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image3 %>
                 </figure>  
-            </div>
+            </div>                
+            <% end %>
+            <% unless @product.image4.blank?  %>
             <div class="column has-text-centered">
                 <figure class="image is-3by2 is-hidden-mobile">
                     <%= image_tag @product.image4 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image4 %>
                 </figure> 
-            </div>
+            </div>                
+            <% end %>
+
         <hr>
             <div class="column">
                 設計師:
@@ -89,7 +97,6 @@
                 </figure>                    
             </div>                                 
         </div>
-
         <div class="column has-text-right">
          <%= link_to '上一頁',:back,class:'button is-info  '%>               
         </div>         
