--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,7 @@
         </div>    
         </div>
 
-         <hr>
+        <hr>
         <div class="column">
         <div class="title">
             商品照片:
@@ -51,7 +51,7 @@
                 <figure class="image is-3by2 is-hidden-mobile " >
                     <%= image_tag @product.image1 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image1 %>
                 </figure> 
             </div>               
@@ -61,7 +61,7 @@
                 <figure class="image is-3by2 is-hidden-mobile" >
                     <%= image_tag @product.image2 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image2%>
                 </figure>
             </div>                
@@ -71,7 +71,7 @@
                 <figure class="image is-3by2 is-hidden-mobile">
                     <%= image_tag @product.image3 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image3 %>
                 </figure>  
             </div>                
@@ -81,7 +81,7 @@
                 <figure class="image is-3by2 is-hidden-mobile">
                     <%= image_tag @product.image4 %>
                 </figure> 
-                <figure class="image is-256x256 is-hidden-desktop">
+                <figure class="image is-3by2 is-hidden-desktop">
                     <%= image_tag @product.image4 %>
                 </figure> 
             </div>                
