--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -44,7 +44,7 @@
       </p>
       <br>
       <p class="subtitle  is-6 has-text-left">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡,裝載每份深刻
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
       </p>
     </div>
   </div>
