--- a/app/views/new_order_mailer/new_order.html.erb
+++ b/app/views/new_order_mailer/new_order.html.erb
@@ -1,9 +1,8 @@
 <div class="title">親愛的 <%= @user.email %> ,您好：</div>
 <p>感謝您對一盒的喜愛與支持，以下是您本次在一盒所買的商品:</p>
+<p>訂單編號:<%= @order.id %></p>
 <% @order.ordered_items.each do |ordered_item|%>
-<ol>
 	<li><%= ordered_item.product.name %> <span><%= ordered_item.quantities %>個</span> ,<br> <span>單筆金額 <%= ordered_item.total %>元</span></li>
-</ol>
 <% end %>
-<p style="text-align: right">本次消費總金額共 <%= @order.total %> 元</p>
+<p >本次消費總金額共 <%= @order.total %> 元</p>
 <p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
