--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -22,7 +22,7 @@
 		    		<div class="card-image">
 		    			<figure class="image is-318x318 is-hidden-mobile" id="float">
 		    				<%= link_to  admin_commodity_path(product) do%>
-		    				<%= image_tag product.pictures %>
+		    				<%= image_tag product.pictures(:thumb) %>
 		    				<% end %>
 		    			</figure>
 		    			<figure class="image is-hidden-desktop" id="float">
