--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -20,7 +20,7 @@
 		    <div class="column is-3">
 		    	<div class="card">
 		    		<div class="card-image">
-		    			<figure class="image is-318x318 is-hidden-mobile" id="float">
+		    			<figure class="image is-318x318 is-hidden-mobile" id="float" style="overflow: hidden">
 		    				<%= link_to  admin_commodity_path(product) do%>
 		    				<%= image_tag product.pictures%>
 		    				<% end %>
