--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -3,10 +3,10 @@
         <div class="columns">
         <div class="column is-5 has-text-centered" >
           <div class="card-image">
-            <figure class="image is-512x512 is-hidden-mobile">
+            <figure class="image is-512x512 is-hidden-mobile" style="overflow: hidden">
                 <%= image_tag @product.pictures %>
             </figure> 
-            <figure class="image is-256x256 is-hidden-desktop">
+            <figure class="image is-256x256 is-hidden-desktop" style="overflow: hidden">
                 <%= image_tag @product.pictures %>
             </figure>  
           </div>         
