--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,9 @@ img{
 figure{
 overflow:hidden;
 }
+
+.is-3by2{height: 100%;}
+
   
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
