--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,13 @@ figure{
 overflow:hidden;
 }
 
-&.is-3by2{
+.image{ 
+  display: block;
+  position: relative;
+  overflow: hidden;}
+
+
+.is-3by2{
 height: 100%;}
 
   
