--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
 $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 512 650;
 
-img{
+.image img{
   display: block;
   height: 100%}
 
