--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  @import "font-awesome";
  @import "bulma/sass/utilities/_all";
  @import "bulma/sass/elements/_all";
+ @import "bulma/sass/elements/image";
  @import "bulma/sass/base/_all";
 
 $success:rgb(54,133,12);
