--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,25 +1,7 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
 
- *= require products 
- *= require loading
- */
  @import "font-awesome-sprockets";
  @import "font-awesome";
  @import "bulma/sass/utilities/_all";
- @import "bulma/sass/elements/_all";
  @import "bulma/sass/elements/image";
  @import "bulma/sass/base/_all";
 
@@ -63,7 +45,9 @@ $colors: (
 $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
- @import "bulma/bulma";
 
+@import "bulma/bulma";
+@import "products";
+@import "loading";
 
 
