--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,7 @@ $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 512 650;
   overflow: hidden;}
 
 
-.image img{
-  display: block;
+img{
   height: 100%}
 
 figure{
