--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -15,7 +15,7 @@
 
 		  <hr>
 
-		  <div class="columns">
+		  <div class="columns is-multiline">
 		  	<% type.products.each do |product| %>
 		    <div class="column is-3">
 		    	<div class="card">
