--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
 		  <hr>
 		<% end %>		  
 
-		  <div class="columns">
+		  <div class="columns is-multiline">
 		  	<% type.products.each do |product| %>
 			  	<% if product.shelve %>
 				    <div class="column is-3" id="floatobject">
