--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,14 +16,14 @@ $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 512 650;
 
 
 img{
-  height: 100%}
+  height: 100%};
 
 figure{
 overflow:hidden;
-}
+};
 
 .image .is-3by2{
-height: 100%;}
+height: 100%;};
 
   
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
