--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,12 +21,12 @@
 				    		<div class="card-image">
 				    			<figure class="image is-318x318 is-hidden-mobile" id="float">
 				    				<%= link_to  product_path(product) do%>
-				    				<%= image_tag product.pictures %>
+				    				<%= image_tag product.pictures,style:'height:100%' %>
 				    				<% end %>
 				    			</figure>
 				    			<figure class="image is-hidden-desktop" id="float">
 				    				<%= link_to  product_path(product) do%>
-				    				<%= image_tag product.pictures %>
+				    				<%= image_tag product.pictures,style:'height:100%' %>
 				    				<% end %>
 				    			</figure>				    			
 				    		</div>				    		
