--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,9 @@ $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 512 650;
 
 
 img{
-  height: 100%};
+  height: 100%
+  max-width: 1000px
+};
 
 figure{
 overflow:hidden;
