--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
  @import "bulma/sass/utilities/_all";
  @import "bulma/sass/elements/image";
  @import "bulma/sass/base/_all";
+ @import "bulma/css/bulma";
 
 $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
