--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -49,40 +49,40 @@
             <% unless @product.image1.blank? %>
              <div class="column has-text-centered">
                 <figure class="image  is-hidden-mobile " >
-                    <%= image_tag @product.image1,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
                 <figure class="image  is-hidden-desktop">
-                    <%= image_tag @product.image1,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
             </div>               
             <% end %>
             <% unless @product.image2.blank?%>
             <div class="column has-text-centered">
                 <figure class="image  is-hidden-mobile" >
-                    <%= image_tag @product.image2,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image2,style:"height:auto;width:100%" %>
                 </figure> 
                 <figure class="image  is-hidden-desktop">
-                    <%= image_tag @product.image2,style="height:auto;width:100%"%>
+                    <%= image_tag @product.image2,style:"height:auto;width:100%"%>
                 </figure>
             </div>                
             <% end %>
             <% unless @product.image3.blank? %>
             <div class="column has-text-centered">
                 <figure class="image  is-hidden-mobile">
-                    <%= image_tag @product.image3,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image3,style:"height:auto;width:100%" %>
                 </figure> 
                 <figure class="image  is-hidden-desktop">
-                    <%= image_tag @product.image3,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image3,style:"height:auto;width:100%" %>
                 </figure>  
             </div>                
             <% end %>
             <% unless @product.image4.blank?  %>
             <div class="column has-text-centered">
                 <figure class="image  is-hidden-mobile">
-                    <%= image_tag @product.image4,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image4,style:"height:auto;width:100%" %>
                 </figure> 
                 <figure class="image  is-hidden-desktop">
-                    <%= image_tag @product.image4,style="height:auto;width:100%" %>
+                    <%= image_tag @product.image4,style:"height:auto;width:100%" %>
                 </figure> 
             </div>                
             <% end %>
