--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 
 $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
-$dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 512 650;
+$dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 350 512 650;
 
 .image{ 
   display: block;
