--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -20,12 +20,12 @@
 		    <div class="column is-3">
 		    	<div class="card">
 		    		<div class="card-image">
-		    			<figure class="image is-318x318 is-hidden-mobile" id="float" style="width:100%">
+		    			<figure class="image is-square is-hidden-mobile" id="float" style="width:100%">
 		    				<%= link_to  admin_commodity_path(product) do%>
 		    				<%= image_tag product.pictures ,style:'height:100%;max-width:none;width:auto'%>
 		    				<% end %>
 		    			</figure>
-		    			<figure class="image is-318x318 is-hidden-desktop" id="float" style="width:100%">
+		    			<figure class="image is-square is-hidden-desktop" id="float" style="width:100%">
 		    				<%= link_to  admin_commodity_path(product) do%>
 		    				 <%= image_tag product.pictures ,style:'height:100%;max-width:none;width:auto'%>
 		    				<% end %>
