--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,10 +3,10 @@
         <div class="columns">
         <div class="column is-5 has-text-centered" >                 
           <div class="card-image">
-            <figure class="image is-512x512 is-hidden-mobile">
+            <figure class="image is-square is-hidden-mobile">
                 <%= image_tag @product.pictures,style:'height:100%;max-width:none;width:auto' %>
             </figure> 
-            <figure class="image is-256x256 is-hidden-desktop">
+            <figure class="image is-square is-hidden-desktop">
                 <%= image_tag @product.pictures,style:'height:100%;max-width:none;width:auto' %>
             </figure>  
           </div>         
