--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -56,7 +56,7 @@
 						<hr>
 						<% if !product.shelve %>						
 						<div class="column has-text-right">
-								<p class="button is-danger ">已下架</p>
+								<p class="button is-danger ">缺貨中</p>
 						</div>	
 						<% end %>															
 		    		</div>
