--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,12 +13,10 @@
         </div>
 
         <div class="column"> 
-             <div class="column">
-              <div class="title is-2"> <%= @product.name %> </div>                 
-            </div>             
+              <div class="title is-2"> <%= @product.name %> </div>                                      
                 <div class="column has-text-right">
                 <% if !@product.shelve %>
-                <p class="button is-danger is-outlined">已下架</p>  
+                <p class="button is-danger is-outlined">缺貨中</p>  
                 <% else %>
                  <%= link_to '我要購買',order_path,class:'button is-danger'%>  
                 <% end %> 
