--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -47,40 +47,40 @@
         </div>
             <% unless @product.image1.blank? %>
              <div class="column has-text-centered">
-                <figure class="image  is-hidden-mobile " >
+                <figure class="image is-650x650 is-hidden-mobile " >
                     <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
-                <figure class="image  is-hidden-desktop">
+                <figure class="image is-650x650 is-hidden-desktop">
                     <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
             </div>               
             <% end %>
             <% unless @product.image2.blank?%>
             <div class="column has-text-centered">
-                <figure class="image  is-hidden-mobile" >
+                <figure class="image is-650x650 is-hidden-mobile" >
                     <%= image_tag @product.image2,style:"height:auto;width:100%" %>
                 </figure> 
-                <figure class="image  is-hidden-desktop">
+                <figure class="image is-650x650 is-hidden-desktop">
                     <%= image_tag @product.image2,style:"height:auto;width:100%"%>
                 </figure>
             </div>                
             <% end %>
             <% unless @product.image3.blank? %>
             <div class="column has-text-centered">
-                <figure class="image  is-hidden-mobile">
+                <figure class="image is-650x650 is-hidden-mobile">
                     <%= image_tag @product.image3,style:"height:auto;width:100%" %>
                 </figure> 
-                <figure class="image  is-hidden-desktop">
+                <figure class="image is-650x650 is-hidden-desktop">
                     <%= image_tag @product.image3,style:"height:auto;width:100%" %>
                 </figure>  
             </div>                
             <% end %>
             <% unless @product.image4.blank?  %>
             <div class="column has-text-centered">
-                <figure class="image  is-hidden-mobile">
+                <figure class="image is-650x650 is-hidden-mobile">
                     <%= image_tag @product.image4,style:"height:auto;width:100%" %>
                 </figure> 
-                <figure class="image  is-hidden-desktop">
+                <figure class="image is-650x650 is-hidden-desktop">
                     <%= image_tag @product.image4,style:"height:auto;width:100%" %>
                 </figure> 
             </div>                
